--- a/Amazing Numbers/Buzz numbers/task-info.yaml
+++ b/Amazing Numbers/Buzz numbers/task-info.yaml
@@ -313,6 +313,15 @@ files:
       
       }
     learner_created: false
+  - name: src/numbers/BuzzNumberGame.java
+    visible: true
+    learner_created: true
+  - name: src/numbers/NumbersGame.java
+    visible: true
+    learner_created: true
 feedback_link: https://hyperskill.org/projects/184/stages/931/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Fri, 26 Jan 2024 13:18:39 UTC"
 record: -1
