--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -7,7 +7,7 @@ update_date: "Thu, 01 Jan 1970 00:00:00 UTC"
 stages:
   - id: 931
     step: 13198
-    is_completed: false
+    is_completed: true
   - id: 932
     step: 13199
     is_completed: false
