--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://cogniterra.org/media/attachments/lesson/25552/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: "Thu, 01 Jan 1970 00:00:00 UTC"
+update_date: "Fri, 26 Jan 2024 17:28:32 UTC"
 stages:
   - id: 931
     step: 13198
@@ -16,7 +16,7 @@ stages:
     is_completed: true
   - id: 934
     step: 13201
-    is_completed: false
+    is_completed: true
   - id: 935
     step: 13202
     is_completed: false
