--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://cogniterra.org/media/attachments/lesson/25552/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: "Fri, 26 Jan 2024 17:28:32 UTC"
+update_date: "Sat, 27 Jan 2024 10:50:42 UTC"
 stages:
   - id: 931
     step: 13198
@@ -19,7 +19,7 @@ stages:
     is_completed: true
   - id: 935
     step: 13202
-    is_completed: false
+    is_completed: true
   - id: 936
     step: 13203
     is_completed: false
